{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 128,
  "lineage": "8a50acfd-e51d-6192-5185-9aed5cb33be7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725300754:security-group/sg-0357295869adc4887",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-027e4589d9f2900f5"
                ]
              }
            ],
            "id": "sg-0357295869adc4887",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-027e4589d9f2900f5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725300754:vpc/vpc-027e4589d9f2900f5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-06bcae1b63dbe92ec",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-007e6e0c0044c5acf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027e4589d9f2900f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0839d0e2914af2cac",
            "owner_id": "851725300754"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725300754:loadbalancer/app/bcs-next-product-site-alb/136847dd1ed169a3",
            "arn_suffix": "app/bcs-next-product-site-alb/136847dd1ed169a3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bcs-next-product-site-alb-876784191.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725300754:loadbalancer/app/bcs-next-product-site-alb/136847dd1ed169a3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bcs-next-product-site-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0357295869adc4887"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0934217a2652a5d84"
              },
              {
                "subnet_id": "subnet-093c35184412e5ab2"
              },
              {
                "subnet_id": "subnet-0c1cb345eff50afff"
              },
              {
                "subnet_id": "subnet-0dfc270fec788739d"
              },
              {
                "subnet_id": "subnet-0e614265d3ff03b13"
              },
              {
                "subnet_id": "subnet-0ee02ba28058a0799"
              }
            ],
            "subnets": [
              "subnet-0934217a2652a5d84",
              "subnet-093c35184412e5ab2",
              "subnet-0c1cb345eff50afff",
              "subnet-0dfc270fec788739d",
              "subnet-0e614265d3ff03b13",
              "subnet-0ee02ba28058a0799"
            ],
            "vpc_id": "vpc-027e4589d9f2900f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725300754:listener/app/bcs-next-product-site-alb/136847dd1ed169a3/4e5e015c56ab47c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:851725300754:targetgroup/bcs-next-product-site-alb-tg/739dd6b0c09c974b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725300754:listener/app/bcs-next-product-site-alb/136847dd1ed169a3/4e5e015c56ab47c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:851725300754:loadbalancer/app/bcs-next-product-site-alb/136847dd1ed169a3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg",
            "data.aws_security_group.default",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:851725300754:targetgroup/bcs-next-product-site-alb-tg/739dd6b0c09c974b",
            "arn_suffix": "targetgroup/bcs-next-product-site-alb-tg/739dd6b0c09c974b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:851725300754:targetgroup/bcs-next-product-site-alb-tg/739dd6b0c09c974b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bcs-next-product-site-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-027e4589d9f2900f5"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3000,
            "id": "sgrule-2088981557",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0357295869adc4887",
            "security_group_rule_id": "sgr-0d616e8627b03b013",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1939857315",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0357295869adc4887",
            "security_group_rule_id": "sgr-0603f5113ec063c0a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}